# mlx-anthropic

./: .gitignore  LICENSE  README.md  pyproject.toml
mlx_anthropic/: __init__.py  anthropic_endpoint.py  schema.py  server.py  streaming.py  translation.py
mlx_anthropic/tool_parsers/: __init__.py  base.py  qwen.py  registry.py
tests/integration/: test_endpoints.py
tests/unit/: test_qwen_parser.py  test_streaming.py  test_translation.py
